advanced-programming: fix typo

--- a/advanced-programming.tex
+++ b/advanced-programming.tex
@@ -1638,7 +1638,7 @@ Why?
 	$\{-1, 0, 1\}$.
 \end{definition}
 
-\begin{remark}
+\begin{remark}{}{}
 	If $A$ is totally unimodular we observe that
 	\begin{itemize}
 		\item All its entries are in $\{-1, 0, 1\}$;
